<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".idcapture.IdCaptureActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvIdCapture"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/tvHeader"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_capture"
                android:gravity="center_horizontal" />

            <ImageView
                android:id="@+id/imgIdPlaceHolder"
                app:layout_constraintTop_toBottomOf="@+id/tvHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@mipmap/id_place_holder"/>

            <TextView
                android:id="@+id/tvPlaceValidId"
                app:layout_constraintTop_toBottomOf="@+id/imgIdPlaceHolder"
                android:text="@string/place_1_valid_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clCaptureImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tvPlaceValidId"
                android:layout_height="wrap_content">
                <ImageView
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/icCaptureImage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_camera"/>
                
                <TextView
                    android:layout_marginLeft="5dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/icCaptureImage"
                    android:text="@string/capture_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clUploadImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/clCaptureImage"
                android:layout_height="wrap_content">
                <ImageView
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/icUploadImage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_attach"/>

                <TextView
                    android:layout_marginLeft="5dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/icUploadImage"
                    android:text="@string/capture_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        app:layout_constraintTop_toBottomOf="@+id/cvIdCapture"
        android:layout_margin="50dp"
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"/>



</androidx.constraintlayout.widget.ConstraintLayout>