<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".idcapture.IdCaptureFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvIdCapture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_start"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:paddingBottom="@dimen/header_margin_bottom">

            <TextView
                android:id="@+id/tvHeader"
                style="@style/header_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/id_capture"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgIdPlaceHolder"
                android:layout_width="@dimen/id_place_holder_width"
                android:layout_height="@dimen/id_place_holder_height"
                android:layout_marginTop="@dimen/header_margin_top"
                android:src="@mipmap/id_place_holder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHeader" />

            <TextView
                android:id="@+id/tvPlaceValidId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="@dimen/header_margin_top"
                android:layout_marginRight="24dp"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:text="@string/place_1_valid_id"
                app:layout_constraintTop_toBottomOf="@+id/imgIdPlaceHolder" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clCaptureImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/header_margin_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPlaceValidId">

                <ImageView
                    android:id="@+id/icCaptureImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_camera"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/capture_image"
                    app:layout_constraintStart_toEndOf="@+id/icCaptureImage"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clUploadImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/header_margin_top"
                android:layout_marginBottom="@dimen/button_margin_bottom"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clCaptureImage">

                <ImageView
                    android:id="@+id/icUploadImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_attach"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/capture_image"
                    app:layout_constraintStart_toEndOf="@+id/icUploadImage"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnNext"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin_xl"
        android:layout_marginTop="24dp"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@+id/cvIdCapture"
        tools:layout_editor_absoluteX="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>